--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,4 @@
-nav {
-    background: rgba(92, 92, 100, 0.295);
-}
+/* App CSS */
 
-#map {
-    height: 400px;
-    width: 100%;
-}
+@import "_mapApp.css";
+@import "_homepage.css";
