--- a/css/app.css
+++ b/css/app.css
@@ -2,3 +2,5 @@
 @import url("_emailPrev.css");
 @import "_mapApp.css";
 @import "_homepage.css";
+@import "_emailCompose.css";
+@import "_emailList.css";
