--- a/css/_mapApp.css
+++ b/css/_mapApp.css
@@ -1,18 +1,85 @@
 /* MapApp CSS */
 
 #map {
-    height: 400px;
+    height: 300px;
     width: 100%;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.container {
+    background: rgb(251, 232, 232);
+}
+
+.search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .place-preview {
     list-style: none;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.preview-details {
+    font-size: var(--font-size-text);
+    font-family: var(--font-family-text);
+    background: #cfb3b3;
+    width: 70%;
+    text-align: center;
+    padding-bottom: 15px;
 }
 
 .places-title {
-    font-size: 40px;
+    font-size: var(--font-size-title);
+    font-family: var(--font-family-subtitle);    
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-left: 10px;
     text-decoration: underline;
+    text-align: center;
 }
+
+.search-btn {
+    cursor: pointer;
+    margin-top: 20px;
+    
+    /* color: 1px solid rgb(8, 65, 47); */
+}
+
+.search-input {
+    background: transparent;
+    margin-top: 20px;
+    width: 50%;
+    border: none;
+    border-bottom: 1px solid rgb(82, 29, 29);
+    outline: none;
+    text-align: center;
+    font-family: var(--font-family-text);
+}
+
+.delete-btn {
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.render-details {
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.action-btns {
+    display: flex;  
+    justify-content: space-around;
+    border-bottom: 1px solid rgb(82, 29, 29);
+    padding-bottom: 5px;
+}
+
+.fa-map-marker {
+    cursor: pointer;
+    font-size: 15px;
+}
+
+
+
