--- a/css/_emailCompose.css
+++ b/css/_emailCompose.css
@@ -1,6 +1,18 @@
-.compose-content{
-border: 2px solid teal;
+.compose-body{
+border: 2px solid rgb(40, 54, 54);
+width: 300px;
 height: 200px;
-width: 40%;
-min-width: 350px;
+}
+.compose{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    display:flex;
+    flex-direction: column; 
+
+}
+.compose button{
+    margin: auto;
+
 }
