--- a/css/_emailPosition.css
+++ b/css/_emailPosition.css
@@ -1,15 +1,16 @@
 .list-and-display-container{
 display:flex;
-width: 100% 
+width: 100% ;
+background:#545966;
+height: 430px;
 }
 .list-container{
+    overflow-y: scroll;
     width:30%;
     min-width: 200px;
-    float: left;
 }
 .email-display{
-    width: 50%;
+    border: 2px solid black;
+    width: 100%;
     min-width: 250px;
-    float: left;
-    background: linear-gradient(to right,rgb(143, 138, 138) , rgb(134, 139, 143));
     }
