--- a/css/_vars.css
+++ b/css/_vars.css
@@ -1,5 +1,5 @@
 :root {
-    --body-bg-color : #c4b3b3;
+    --body-bg-color : rgb(204, 214, 231);
     --font-size-title : 8vw;
     --font-size-subtitle :6vw;
     --font-size-text :4vw;
