--- a/css/_emailPosition.css
+++ b/css/_emailPosition.css
@@ -1,16 +1,20 @@
 .list-and-display-container{
 display:flex;
 width: 100% ;
-background:#545966;
-height: 430px;
+background: var(--body-bg-color);
+/* height: 430px; */
+margin-top: 20px;
 }
 .list-container{
-    overflow-y: scroll;
     width:30%;
     min-width: 200px;
 }
 .email-display{
-    border: 2px solid black;
+    border: 1px solid rgb(177, 112, 112);
     width: 100%;
     min-width: 250px;
     }
+
+.email-disp-text {
+    margin-left: 10px;
+}
