--- a/css/_emailCompose.css
+++ b/css/_emailCompose.css
@@ -1,7 +1,8 @@
 .compose-body{
-border: 2px solid rgb(40, 54, 54);
-width: 300px;
-height: 200px;
+    border-bottom: 1px solid rgb(125, 125, 125);
+    width: 300px;
+    height: 200px;
+ 
 }
 .compose{
     position: fixed;
@@ -10,9 +11,49 @@ height: 200px;
     width: 300px;
     display:flex;
     flex-direction: column; 
-
+    border: 1px solid rgb(125, 125, 125)
 }
 .compose button{
-    margin: auto;
+    border-radius: 25%;
+    margin: 0 auto;
+    font-size: 1.0rem;
+    padding: 0.25rem 0.5rem;
+    display: block;
+    background-color: #009ac9;
+    border: 1px solid transparent;
+    color: #ffffff;
+    font-weight: 300;
+    border-radius: 3px;
+    transition: all 0.3s ease-in-out;
+      }
+      
+    .compose button:hover {
+        background-color: #39259e;
+        border-color: #009ac9;
+      }
 
-}
+    .button-wrapper {
+        background: rgb(170, 160, 160);
+    }
+
+    .compose-title {
+        background: rgb(170, 160, 160);
+        padding-left: 5px; 
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .compose .fa-times {
+        align-self: center;
+        margin-right: 5px;
+        color: rgb(26, 48, 81);
+        font-size: 20px;
+    }
+
+    .compose .fa-times:hover {
+        color: rgb(110, 118, 131);   
+        background: rgb(233, 230, 230)     
+    }
+
+
+
