--- a/css/_mapApp.css
+++ b/css/_mapApp.css
@@ -42,7 +42,10 @@
     margin-top: 10px;
     margin-bottom: 10px;
     text-decoration: underline;
-    text-align: center;
+    text-align: left;
+    margin-left: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .search-btn {
@@ -84,6 +87,12 @@
     cursor: pointer;
     font-size: 15px;
 }
+
+.sort-places {
+
+}
+
+
 
 
 
