--- a/css/_mapApp.css
+++ b/css/_mapApp.css
@@ -37,7 +37,7 @@
 }
 
 .places-title {
-    font-size: var(--font-size-title);
+    font-size: var(--font-size-subtitle);
     font-family: var(--font-family-subtitle);    
     margin-top: 10px;
     margin-bottom: 10px;
@@ -89,7 +89,13 @@
 }
 
 .sort-places {
-
+    background: transparent;
+    width: 23%;
+    border: none;
+    /* border-bottom: 1px solid rgb(177, 112, 112); */
+    outline: none;
+    padding-left: 15px;
+    font-family: var(--font-family-subtitle);
 }
 
 
